--- a/.github/workflows/query.yml
+++ b/.github/workflows/query.yml
@@ -1,7 +1,5 @@
-name: Perform various scans on the results of the query
+name: Query GitHub for list of repositories and start SRS
 on:
-  repository_dispatch:
-    types: [srs-command]
   workflow_dispatch:
     inputs:
       search:
@@ -27,9 +25,6 @@ on:
 jobs:
   query-repositories:
     runs-on: ubuntu-latest
-    outputs:
-      json: ${{ steps.json.outputs.json }}
-      comment-id: ${{ steps.comment.outputs.comment-id }}
     env:
       GH_TOKEN: ${{ secrets.GHPAT }}
       DEFAULT: "archived:false language:c language:c++"
@@ -38,40 +33,26 @@ jobs:
       ABOVEMAX: 1 # include results above MAXSTARS in a single query, needs to be <=1000 results
       INCREMENT: 200 # size to group search loop into for range between MINSTARS..MAXSTARS-1
     steps:
-      - name: install dependencies
-        run: |
-          type -p curl >/dev/null || sudo apt install curl -y
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-          && sudo apt-get update \
-          && sudo apt-get install gh -y
-
       - name: set search terms from repo dispatch
         id: set
         run: |
-          search="${{ github.event.client_payload.slash_command.args.named.search }}"
-          [[ -z $search ]] && search="${{ inputs.search }}"
+          search="${{ inputs.search }}"
           [[ -z $search ]] && search="$DEFAULT"
           echo search="$search" >> $GITHUB_OUTPUT
 
-          minstars=${{ github.event.client_payload.slash_command.args.named.minstars }}
-          [[ -z $minstars ]] && minstars="${{ inputs.minstars }}"
+          minstars="${{ inputs.minstars }}"
           [[ -z $minstars ]] && minstars="$MINSTARS"
           echo minstars="$minstars" >> $GITHUB_OUTPUT
 
-          maxstars=${{ github.event.client_payload.slash_command.args.named.maxstars }}
-          [[ -z $maxstars ]] && maxstars="${{ inputs.maxstars }}"
+          maxstars="${{ inputs.maxstars }}"
           [[ -z $maxstars ]] && maxstars="$MAXSTARS"
           echo maxstars="$maxstars" >> $GITHUB_OUTPUT
 
-          increment=${{ github.event.client_payload.slash_command.args.named.increment }}
-          [[ -z $increment ]] && increment="${{ inputs.increment }}"
+          increment="${{ inputs.increment }}"
           [[ -z $increment ]] && increment="$INCREMENT"
           echo increment="$increment" >> $GITHUB_OUTPUT
 
-          abovemax=${{ github.event.client_payload.slash_command.args.named.abovemax }}
-          [[ -z $abovemax ]] && abovemax="${{ inputs.abovemax }}"
+          abovemax="${{ inputs.abovemax }}"
           [[ -z $abovemax ]] && abovemax="$ABOVEMAX"
           echo abovemax="$abovemax" >> $GITHUB_OUTPUT
 
@@ -96,14 +77,12 @@ jobs:
           echo "## Repositories matching search query '${SEARCH} stars:>=$MINSTARS': $count" >> query-summary.md
 
       - name: filter by build system
-        id: json
         run: |
           JSON=$(./query/filter.sh)
           echo "${JSON}" > filtered-repos.json
           COUNT=$(jq '. | length' filtered-repos.json)
 
           echo "## Repositories with supported build systems: $COUNT" >> query-summary.md
-          echo json=$JSON >> $GITHUB_OUTPUT
 
       - name: record run id
         run: |
@@ -113,15 +92,50 @@ jobs:
       - name: Github step summary
         run: cat query-summary.md >> $GITHUB_STEP_SUMMARY
 
-      - name: Create comment
-        uses: peter-evans/create-or-update-comment@v2
-        id: comment
-        if: github.event.client_payload.github.payload.issue.number != ''
+      - name: create matrix
+        id: matrix
+        run: |
+
+         COUNT=1
+         MATRIXID=1
+
+         JSON="{ include :["
+
+         for row in $(jq -rc '.[]' filtered-repos.json); do
+
+              # Build matrices are limited to 256 items so we split the work
+              if [ $(( $COUNT % 256 )) -eq 0 ]; then
+                 # Remove last ","
+                 JSON="${JSON%?}"
+                 JSON+="]}"
+
+                 echo "$MATRIXID: $JSON"
+                 echo "$JSON" > matrix${MATRIXID}.json
+
+                 JSON="{ include: ["
+                 (( MATRIXID++ ))
+              fi
+
+              JSON+="$row,"
+
+              (( COUNT++ ))
+
+         done
+
+         # Remove last ","
+         JSON="${JSON%?}"
+         JSON+="]}"
+
+         echo "number-of-matrices=${MATRIXID}" >> $GITHUB_OUTPUT
+         echo "$JSON" > matrix${MATRIXID}.json
+
+         echo "$MATRIXID: $JSON"
+
+      - name: Cache matrices
+        uses: actions/cache@v3
         with:
-          token: ${{ secrets.GHPAT }}
-          issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
-          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-          body-file: query-summary.md
+          path: matrix*.json
+          key: matrix-${{ github.run_id }}
 
       - name: save results
         uses: actions/upload-artifact@v3
@@ -133,45 +147,5 @@ jobs:
             filtered-repos.json
             query-summary.md
 
-  scan-build:
-    needs: query-repositories
-    uses: ./.github/workflows/scan-build.yml
-    secrets: inherit
-    with:
-      input: ${{ needs.query-repositories.outputs.json }}
-
-  ossf-scorecard:
-    needs: query-repositories
-    uses: ./.github/workflows/ossf-scorecard.yml
-    secrets: inherit
-    with:
-      input: ${{ needs.query-repositories.outputs.json }}
-
-  metadata:
-    needs: query-repositories
-    uses: ./.github/workflows/metadata.yml
-    secrets: inherit
-    with:
-      input: ${{ needs.query-repositories.outputs.json }}
-
-  aggregate-results:
-    needs: [query-repositories, scan-build, ossf-scorecard, metadata]
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GHPAT }}
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GHPAT }}
-
-      - name: start summary workflow
-        run: |
-          comment=""
-          commentid="${{ needs.query-repositories.outputs.comment-id }}"
-          if [ $commentid != "" ]; then
-            comment=" -f comment-id=$commentid"
-          fi
-
-          gh workflow run summary.yml -f delay="1h" -f run-id=${{ github.run_id }} $comment
+      - name: start scans
+        run: gh workflow run srs.yml -f run-ids='${{ github.run_id }}' -f number-of-matrices=${{ steps.matrix.outputs.number-of-matrices }} -f matrix=1
